Revision history for Reply

{{$NEXT}}

0.42  2016-08-23
      - make tests pass again if Term::ReadKey is not installed (andk, #52)

0.41  2016-08-16
      - add #vars command to list currently in scope variable names (garu, #39)
      - add Reply::Plugin::Pager to page long results (y, #47)

0.40  2016-06-25
      - fix docs (y, #49)

0.39  2016-05-29
      - allow ~/ in the history_file option to ReadLine (y, #48)

0.38  2015-12-02
      - fix running reply without the Package plugin (2shortplanks, #45)

0.37  2014-11-18
      - internal refactoring for extensibility (sergeyromanov, #41)

0.36  2014-11-16
      - unshift onto @INC instead of pusing directories set with -l/-b/-I
        (ilmari, #40)

0.35  2014-07-04
      - allow executing snippets and files from the argument list (suggested by
        tobyink, #36)

0.34  2013-08-29
      - fix running reply without the ReadLine plugin (lestrrat, #26)

0.33  2013-08-16
      - Support Term::ReadLine::Caroline (tokuhirom, #24)

0.32  2013-07-18
      - Fix test failures if Carp::Always isn't installed (djerius, #21)
      - Clarify ReadLine documentation about the location of the history file
        (Kosuke Asami)

0.31  2013-07-18
      - fix a ReadLine bug introduced in the previous release (Kosuke Asami,
        #22)

0.30  2013-07-17
      - better support for Term::ReadLine::Perl5 (Kosuke Asami, #20)

0.29  2013-07-10
      - Make CollapseStack always run under Carp::Always (#13)
      - Fix lexical subs (#19)

0.28  2013-07-10
      - remove accidentally added dep on 'mro', which doesn't exist on 5.8

0.27  2013-07-10
      - Add completion plugin for #-commands (#18)
      - More completion edge case fixes
      - More internal refactorings

0.26  2013-07-08
      - Let Data::Printer handle coloring in the DataPrinter plugin. (Sawyer X)
      - Add a CollapseStack plugin, to make working with large stack traces
        easier. (sartak)

0.25  2013-07-05