@@ -13,7 +13,7 @@ skip = ^lib/Reply/Util.pm$
 :version = 0.14
 dist = Reply
 repository = github
-Test::Compile_skip = ::(?:CollapseStack|Nopaste|DataDump|DataPrinter|Editor|AutoRefresh|Autocomplete::Keywords|Pager)$
+Test::Compile_skip = ::(?:CollapseStack|Nopaste|DataDump|DataPrinter|Editor|AutoRefresh|Autocomplete::Keywords|Pager|Multiline::PPI)$
 PodWeaver_finder = WeaverFiles
 
 [MetaNoIndex]
@@ -28,6 +28,7 @@ skip = ^Class::Refresh$
 skip = ^Data::Dump$
 skip = ^Data::Printer$
 skip = ^IO::Pager$
+skip = ^PPI$
 skip = ^mro$
 skip = ^MRO::Compat$
 skip = ^Proc::InvokeEditor$
@@ -45,6 +46,7 @@ Class::Refresh = 0.05
 Data::Dump = 0
 Data::Printer = 0
 IO::Pager = 0
+PPI = 0
 Proc::InvokeEditor = 0
 Term::ReadKey = 0
 Term::ReadLine::Gnu = 0
