@@ -42,6 +42,13 @@ BEGIN {
 }
 PREFIX
 
+sub read {
+    my $self = shift;
+    my ($next, $read_coderef) = @_;
+
+    return $read_coderef->();
+}
+
 sub compile {
     my $self = shift;
     my ($next, $line, %args) = @_;
